[gd_scene load_steps=2 format=3 uid="uid://bi818yvkl1nhl"]

[ext_resource type="Script" uid="uid://b2k3nmn112api" path="res://script/UI/recipe_tooltip.gd" id="1_j8mcp"]

[node name="PopupPanel" type="PopupPanel"]
oversampling_override = 1.0
size = Vector2i(258, 108)
visible = true
script = ExtResource("1_j8mcp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="ItemNameLabel" type="RichTextLabel" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 2
vertical_alignment = 1

[node name="MaterialsLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 2
vertical_alignment = 1

[node name="CostLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 2
vertical_alignment = 1
